--- a/app/src/main/res/layout/activity_create_group_chat.xml
+++ b/app/src/main/res/layout/activity_create_group_chat.xml
@@ -82,20 +82,20 @@
             android:textSize="@dimen/_13ssp"
             android:autofillHints="" />
 
-        <com.google.android.material.button.MaterialButton
-            android:id="@+id/buttonAddMembers"
-            android:layout_width="match_parent"
-            android:layout_height="@dimen/_50sdp"
-            android:layout_marginTop="@dimen/_13sdp"
-            android:textStyle="bold"
-            android:textSize="@dimen/_13sdp"
-            android:text="@string/add_members"
-            app:cornerRadius="@dimen/_8sdp"/>
-        <androidx.recyclerview.widget.RecyclerView
-            android:id="@+id/addedMembers"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:layout_marginTop="16dp" />
+<!--        <com.google.android.material.button.MaterialButton-->
+<!--            android:id="@+id/buttonAddMembers"-->
+<!--            android:layout_width="match_parent"-->
+<!--            android:layout_height="@dimen/_50sdp"-->
+<!--            android:layout_marginTop="@dimen/_13sdp"-->
+<!--            android:textStyle="bold"-->
+<!--            android:textSize="@dimen/_13sdp"-->
+<!--            android:text="@string/add_members"-->
+<!--            app:cornerRadius="@dimen/_8sdp"/>-->
+<!--        <androidx.recyclerview.widget.RecyclerView-->
+<!--            android:id="@+id/addedMembers"-->
+<!--            android:layout_width="match_parent"-->
+<!--            android:layout_height="wrap_content"-->
+<!--            android:layout_marginTop="16dp" />-->
         <FrameLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
