--- a/app/src/main/res/layout/activity_sign_up.xml
+++ b/app/src/main/res/layout/activity_sign_up.xml
@@ -103,6 +103,36 @@
             android:paddingEnd="@dimen/_16sdp"
             android:textColor="@color/primary_text"
             android:textSize="@dimen/_13ssp" />
+        <LinearLayout
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:orientation="horizontal">
+
+            <EditText
+                android:id="@+id/inputConfirmCode"
+                android:layout_width="150dp"
+                android:layout_height="@dimen/_45sdp"
+                android:layout_marginTop="@dimen/_13sdp"
+                android:background="@drawable/background_input"
+                android:hint="@string/confirm_code"
+                android:imeOptions="actionDone"
+                android:inputType="textPassword"
+                android:paddingStart="@dimen/_16sdp"
+                android:paddingEnd="@dimen/_16sdp"
+                android:textColor="@color/primary_text"
+                android:textSize="@dimen/_13ssp" />
+            <com.google.android.material.button.MaterialButton
+                android:id="@+id/buttonsendcode"
+                android:layout_width="match_parent"
+                android:layout_height="@dimen/_50sdp"
+                android:layout_marginTop="@dimen/_13sdp"
+                android:layout_marginStart="@dimen/_10sdp"
+                android:textStyle="bold"
+                android:textSize="@dimen/_13sdp"
+                android:text="@string/confirm"
+                app:cornerRadius="@dimen/_8sdp"/>
+        </LinearLayout>
+
         <FrameLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
