最近发布了项目的总结报告，加急更新一下

--- a/app/src/main/res/layout/activity_sign_up.xml
+++ b/app/src/main/res/layout/activity_sign_up.xml
@@ -129,7 +129,7 @@
                 android:layout_marginStart="@dimen/_10sdp"
                 android:textStyle="bold"
                 android:textSize="@dimen/_13sdp"
-                android:text="@string/confirm"
+                android:text="@string/send_code"
                 app:cornerRadius="@dimen/_8sdp"/>
         </LinearLayout>
 
