--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -73,27 +73,26 @@
 
     </FrameLayout>
 
-    <com.google.android.material.floatingactionbutton.FloatingActionButton
-        android:id="@+id/fabNewUser"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginEnd="@dimen/_24sdp"
-        android:layout_marginBottom="@dimen/_12sdp"
-        android:backgroundTint="@color/secondary_text"
-        android:src="@drawable/ic_add"
-        android:tint="@color/white"
-        app:layout_constraintBottom_toTopOf="@+id/button_to_group_chat"
-        app:layout_constraintEnd_toEndOf="parent" />
-    <com.google.android.material.floatingactionbutton.FloatingActionButton
-        android:id="@+id/button_to_group_chat"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginEnd="@dimen/_24sdp"
-        android:layout_marginBottom="@dimen/_24sdp"
-        android:backgroundTint="@color/primary"
-        android:src="@drawable/ic_add"
+    <Button
+        android:id="@+id/bdfriends"
+        android:layout_width="150dp"
+        android:layout_height="60dp"
+        android:text="@string/fu"
+        android:layout_margin="@dimen/_10ssp"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toStartOf="@+id/bdgroups"
+        app:layout_constraintHorizontal_bias="0.5"
+        app:layout_constraintStart_toStartOf="parent" />
+
+    <Button
+        android:id="@+id/bdgroups"
+        android:layout_width="150dp"
+        android:layout_height="60dp"
+        android:text="@string/fg"
+        android:layout_margin="@dimen/_10ssp"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
-        android:tint="@color/white"/>
+        app:layout_constraintHorizontal_bias="0.5"
+        app:layout_constraintStart_toEndOf="@+id/bdfriends" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
