--- a/app/src/main/res/layout/item_container_send_message.xml
+++ b/app/src/main/res/layout/item_container_send_message.xml
@@ -15,8 +15,8 @@
         android:paddingEnd="@dimen/_12sdp"
         android:paddingBottom="@dimen/_8sdp"
         app:layout_constraintWidth_max="wrap"
-        android:textColor="@color/white"
-        android:textSize="@dimen/_13sdp"
+        android:textColor="@color/black"
+        android:textSize="@dimen/_10sdp"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintTop_toTopOf="parent"
         app:layout_constraintWidth_percent="0.8"
