--- a/app/src/main/res/drawable/background_reciever_message.xml
+++ b/app/src/main/res/drawable/background_reciever_message.xml
@@ -2,11 +2,12 @@
 <shape xmlns:android="http://schemas.android.com/apk/res/android"
     android:shape="rectangle">
 
-    <solid android:color="@color/reieved_message_background" />
+    <solid android:color="#B2E4FB" />
     <corners
-        android:bottomRightRadius="@dimen/_24sdp"
-        android:topLeftRadius="@dimen/_24sdp"
-        android:topRightRadius="@dimen/_24sdp" />
+        android:bottomRightRadius="@dimen/_12sdp"
+        android:topLeftRadius="@dimen/_12sdp"
+        android:bottomLeftRadius="@dimen/_12sdp"
+        android:topRightRadius="@dimen/_12sdp" />
 
 
 </shape>
