--- a/app/src/main/res/drawable/background_sent_message.xml
+++ b/app/src/main/res/drawable/background_sent_message.xml
@@ -1,11 +1,12 @@
 <?xml version="1.0" encoding="utf-8"?>
 <shape xmlns:android="http://schemas.android.com/apk/res/android"
     android:shape="rectangle">
-    <solid android:color="@color/primary" />
+    <solid android:color="#E0E0E0" />
     <corners
-        android:bottomLeftRadius="@dimen/_24sdp"
-        android:topLeftRadius="@dimen/_24sdp"
-        android:topRightRadius="@dimen/_24sdp"/>
+        android:bottomLeftRadius="@dimen/_12sdp"
+        android:topLeftRadius="@dimen/_12sdp"
+        android:topRightRadius="@dimen/_12sdp"
+        android:bottomRightRadius="@dimen/_12sdp" />
 
 
 </shape>
