--- a/app/src/main/res/layout/activity_show_app.xml
+++ b/app/src/main/res/layout/activity_show_app.xml
@@ -45,8 +45,9 @@
         android:id="@+id/appDescription"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_marginTop="20dp"
+        android:layout_marginTop="8dp"
         app:cardCornerRadius="15dp"
+        android:layout_margin="@dimen/_12sdp"
         app:layout_constraintTop_toBottomOf="@id/appVersion"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintEnd_toEndOf="parent">
@@ -91,6 +92,7 @@
         android:layout_height="wrap_content"
         android:layout_marginTop="10dp"
         app:cardCornerRadius="10dp"
+        android:layout_margin="@dimen/_12sdp"
         app:layout_constraintTop_toBottomOf="@id/appDescription"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintEnd_toEndOf="parent">
@@ -127,6 +129,7 @@
         android:layout_height="wrap_content"
         android:layout_marginTop="10dp"
         app:cardCornerRadius="10dp"
+        android:layout_margin="@dimen/_12sdp"
         app:layout_constraintTop_toBottomOf="@id/contactInfoCard"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintEnd_toEndOf="parent">
@@ -166,7 +169,6 @@
 <!--        app:layout_constraintTop_toBottomOf="@id/appVersion"-->
 <!--        app:layout_constraintStart_toStartOf="parent"-->
 <!--        app:layout_constraintEnd_toEndOf="parent"/>-->
-
     <RatingBar
         android:id="@+id/appRating"
         android:layout_width="wrap_content"
