--- a/app/src/main/res/layout/activity_user_info.xml
+++ b/app/src/main/res/layout/activity_user_info.xml
@@ -117,7 +117,7 @@
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
                         android:textColor="@color/black"
-                        android:text="about"
+                        android:text="关于"
                         android:fontFamily="@font/poppinsmedium"
                         android:textSize="20sp"
                         android:layout_alignParentStart="true"
@@ -160,7 +160,7 @@
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
                         android:textColor="@color/black"
-                        android:text="information"
+                        android:text="个人信息"
                         android:fontFamily="@font/poppinsmedium"
                         android:textSize="20sp"
                         android:layout_alignParentStart="true"
@@ -178,7 +178,7 @@
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
                         android:textColor="@color/black"
-                        android:text="username"
+                        android:text="用户名"
                         android:fontFamily="@font/poppinsmedium"
                         android:textSize="15sp"
                         android:layout_alignParentStart="true"
@@ -206,7 +206,7 @@
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
                         android:textColor="@color/black"
-                        android:text="gender"
+                        android:text="性别"
                         android:fontFamily="@font/poppinsmedium"
                         android:textSize="15sp"
                         android:layout_alignParentStart="true"
@@ -234,7 +234,7 @@
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
                         android:textColor="@color/black"
-                        android:text="age"
+                        android:text="年龄"
                         android:fontFamily="@font/poppinsmedium"
                         android:textSize="15sp"
                         android:layout_alignParentStart="true"
@@ -262,7 +262,7 @@
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
                         android:textColor="@color/black"
-                        android:text="date_of_birth"
+                        android:text="生日"
                         android:fontFamily="@font/poppinsmedium"
                         android:textSize="15sp"
                         android:layout_alignParentStart="true"
@@ -289,7 +289,7 @@
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
                         android:textColor="@color/black"
-                        android:text="email"
+                        android:text="邮件"
                         android:fontFamily="@font/poppinsmedium"
                         android:textSize="15sp"
                         android:layout_alignParentStart="true"
@@ -309,12 +309,22 @@
 
         </com.google.android.material.card.MaterialCardView>
 
-        <Button
-            android:layout_width="wrap_content"
+        <com.google.android.material.card.MaterialCardView
+            android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:text="@string/logout"
+            android:layout_marginTop="10dp"
+            app:cardCornerRadius="10dp">
+
+
+        </com.google.android.material.card.MaterialCardView>
+
+        <Button
+            android:layout_width="@dimen/_110sdp"
+            android:layout_height="@dimen/_70sdp"
+            android:text="退出账户"
             android:id="@+id/logout"
             android:layout_gravity="center"
-            android:layout_marginTop="20dp" />
+            android:textSize="@dimen/_18sdp"
+            android:layout_marginTop="10dp" />
     </LinearLayout>
 </ScrollView>
