--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -2,8 +2,8 @@
 <resources>
     <color name="black">#FF000000</color>
     <color name="white">#FFFFFFFF</color>
-    <color name="primary">#1C2E46</color>
-    <color name="primary_dark">#142232</color>
+    <color name="primary">#068798</color>
+    <color name="primary_dark">#788EA6</color>
     <color name="primary_text">#212121</color>
     <color name="secondary_text">#727272</color>
     <color name="input_background">#ECECEC</color>
