完善细节部分：AI聊天数据库格式完善，页面跳转逻辑优化，软件图标二次设计

--- a/app/src/main/res/layout/activity_sign_up.xml
+++ b/app/src/main/res/layout/activity_sign_up.xml
@@ -37,8 +37,7 @@
                 android:layout_width="@dimen/_80sdp"
                 android:layout_height="@dimen/_80sdp"
                 android:background="@drawable/background_image"
-                android:scaleType="centerCrop"
-                app:riv_oval="true"/>
+                android:scaleType="centerCrop" />
 
             <TextView
                 android:id="@+id/textUploadImage"
