--- a/app/src/main/res/layout/activity_user_info.xml
+++ b/app/src/main/res/layout/activity_user_info.xml
@@ -294,16 +294,17 @@
                         android:textSize="15sp"
                         android:layout_alignParentStart="true"
                         android:textStyle="bold"/>
+
                     <TextView
                         android:id="@+id/mail"
                         android:layout_width="wrap_content"
-                        android:layout_height="wrap_content"
-                        android:textColor="#6E6C6C"
-                        android:text=""
-                        android:fontFamily="@font/poppinsmedium"
-                        android:textSize="15sp"
+                        android:layout_height="match_parent"
                         android:layout_alignParentEnd="true"
-                        android:textStyle="bold"/>
+                        android:fontFamily="@font/poppinsmedium"
+                        android:text=""
+                        android:textColor="#6E6C6C"
+                        android:textSize="15sp"
+                        android:textStyle="bold" />
                 </RelativeLayout>
             </LinearLayout>
 
